# jsonmtz

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  json2mtz.c  jsonmtz.c  mtz2json.c
ccp4io/: Doxyfile
include/: jsonmtz.in.h
jansson/: CMakeLists.txt
jansson/src/: strconv.c
